# MALDIassist-py

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: wheels.yml
examples/: find_discriminating_mz.py
maldiassist/: __init__.py  _util.py  baseline.py  cohort.py  filter.py  io.py  metrics.py  peaks.py  preprocess.py  rcompat.py  savgol.py  spectrum_math.py  viz.py
src/: spectrum_math_cpp.cpp
tests/: test_kde_parity.py
