[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "maldiassist"
version = "0.2.0"
description = "Mathematical utilities for MALDI-TOF mass spectrometry (Python port of the MALDIassist R package)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Wonseok Oh" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6"]
test = ["pytest>=7"]

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
# The pure-Python package plus the compiled extension (installed via CMake).
wheel.packages = ["maldiassist"]
# Ship the C++ sources and build files in the sdist so it can build from source.
# Leading "/" anchors patterns to the project root (git-wildmatch semantics) so
# they do not recursively match files inside local venvs or build trees.
sdist.include = [
    "/src/*.cpp",
    "/CMakeLists.txt",
]
sdist.exclude = [
    "/Rpkg",
    "/linkedin",
    "/results",
    "/tests",
    "/.venv*",
    "/build",
    "/dist",
    "/examples/results",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
# Build CPython wheels for 3.9 - 3.13; skip 32-bit and musllinux to keep CI lean.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *musllinux*"
build-frontend = "build"
# Use manylinux_2_28: recent numpy/scipy no longer ship manylinux2014 wheels, so
# the older image would force a source build (missing OpenBLAS) during testing.
manylinux-x86_64-image = "manylinux_2_28"
test-requires = "pytest"
test-command = "pytest {project}/tests -q"

[tool.cibuildwheel.macos]
# Build universal2 wheels (x86_64 + arm64) on macOS.
archs = ["universal2"]
# nanobind uses C++17 aligned new/delete, which requires macOS 10.13+; raise the
# deployment target above cibuildwheel's default (10.9) to avoid a build error.
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

[tool.cibuildwheel.linux]
archs = ["x86_64"]
